--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </header>
             <div class="user-profile">
                 <img src="./assets/img/user.jpg" alt="" class="user-img">
-                <h2 class="user-name">Bao Pham</h2>
+                <h2 class="user-name">Tai Phan</h2>
                 <div class="user-profile-right hide-on-mobile is-flex">
                     <a href="" class="user-buy-vip">MUA VIP NGAY</a>
                     <a href="" class="user-import-vip">NHẬP CODE VIP</a>
